Fix percentage mark

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -215,10 +215,10 @@
   </table>
 </div>
 <p>
-  On average, we see a \(45.5%\) increase in speed by implementing this trick. 
+  On average, we see a \(45.5\%\) increase in speed by implementing this trick. 
   We also implemented an incremental version for Task 2, 
   as the supersampling could also benefit from this step. 
-  However, we don’t see such a huge speedup (only \(~10%\) faster for a sampling rate of 16), 
+  However, we don’t see such a huge speedup (only ~\(10\%\) faster for a sampling rate of 16), 
   potentially due to additional float point multiplications at the sub-pixel level.
 
 </p>
