--- a/proj2/index.html
+++ b/proj2/index.html
@@ -300,6 +300,11 @@
 
     <h3 align="middle">Part 7: Design your own mesh!</h3>
 
+
+	<h3 align="middle">Appendix</h3>
+
+	<a href="https://cal-cs184-student.github.io/sp22-project-webpages-Haohua-Lyu-and-Xiao-Song/">Link to project webpage</a>
+
 </body>
 
 </html>
