--- a/proj2/index.html
+++ b/proj2/index.html
@@ -391,6 +391,38 @@
 
     <h3 align="middle">Part 6: Loop subdivision for mesh upsampling</h3>
 
+	<div align="middle">
+		<table style="width=100%">
+			<tr>
+			  <td>
+				<img src="images/p6_edge_effect_1.png" align="middle" width="500px"/>
+				<figcaption align="middle"><code>dae/teapot.dae</code> before any loop subdivision.</figcaption>
+			  </td>
+			  <td>
+				<img src="images/p6_edge_effect_2.png" align="middle" width="500px"/>
+				<figcaption align="middle"><code>dae/teapot.dae</code> after first loop subdivision (become less sharp).</figcaption>
+			  </td>
+			</tr>
+			<br>
+			<tr>
+				<td>
+				  <img src="images/p6_edge_effect_3.png" align="middle" width="500px"/>
+				  <figcaption align="middle"><code>dae/teapot.dae</code> after second loop subdivision.</figcaption>
+				</td>
+				<td>
+				  <img src="images/p6_edge_effect_4.png" align="middle" width="500px"/>
+				  <figcaption align="middle"><code>dae/teapot.dae</code> after third loop subdivision (become completely smooth).</figcaption>
+				</td>
+			  </tr>
+			<br>
+		</table>
+	  </div>
+
+
+	<div align="middle">
+		<img src="images/p6_edge_way_to_fix.png" align="middle" width="500px"/>
+		<figcaption align="middle">Using different edge split weight for edge on sharp edged. Source Lecture 8 slides</figcaption>
+	</div>
 
 
     <h2 align="middle">Section III: Optional Extra Credit</h2>
